--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <title>PolarSPARC Blog</title>
-    <link href="../css/polarsparc-v2.4.css" type="text/css" rel="stylesheet" />
+    <link href="./css/polarsparc-v2.4.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <br/>
@@ -634,6 +634,10 @@
             ZENgineer ...</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/CMake.html"><span class="bold">Introduction to CMake</span>
+            </a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/General/N2-Cluster.html"><span class="bold">Building a ODroid N2
             Cluster</span></a></p>
         </li>
@@ -1066,6 +1070,26 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-1.html"><span class="bold">Hands-on MongoDB ::
             Part-1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>Neo4J</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Neo4J/Neo4J-3.html"><span class="bold">Getting Started with Neo4J
+            - Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Neo4J/Neo4J-2.html"><span class="bold">Getting Started with Neo4J
+            - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Neo4J/Neo4J-1.html"><span class="bold">Getting Started with Neo4J
+            - Part 1</span></a></p>
         </li>
       </ul>
     </div>
