CSS, Index, Tips

--- a/index.html
+++ b/index.html
@@ -1523,6 +1523,26 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Tips</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Tips/JetBrains.html"><span class="bold">JetBrains IDE Markdown
+            Appears Blank</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Tips/LinuxCitrix.html"><span class="bold">Citrix Workspace App
+            for Linux Gotcha</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Tips/MintSamba.html"><span class="bold">Linux Mint Samba Share
+            Gotcha</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>VectorDB</p>
     </div>
     <br/>
