--- a/DataX/SQLAlchemy-2.html
+++ b/DataX/SQLAlchemy-2.html
@@ -37,7 +37,7 @@
       <p>Overview</p>
     </div>
     <div id="para-div">
-      <p>In <a href="https://polarsparc.github.io/Data/SQLAlchemy-1.html" target="_blank"><span class="bold">Part - 1</span></a>
+      <p>In <a href="https://polarsparc.github.io/DataX/SQLAlchemy-1.html" target="_blank"><span class="bold">Part - 1</span></a>
         of this series, we focused on basic capabilities of the <span class="bold">Core</span> layer for interacting with
         <span class="bold">PostgreSQL</span> database.</p>
       <p>In this article, we will explore the Object Relational Mapping (<span class="hi-blue">ORM</span>) layer for interacting
@@ -54,7 +54,7 @@
       <p>Hands-on with SQLAlchemy ORM</p>
     </div>
     <div id="para-div">
-      <p>In <a href="https://polarsparc.github.io/Data/SQLAlchemy-1.html" target="_blank"><span class="bold">Part - 1</span></a>,
+      <p>In <a href="https://polarsparc.github.io/DataX/SQLAlchemy-1.html" target="_blank"><span class="bold">Part - 1</span></a>,
         we already created a simple database table called <span class="hi-yellow">customer</span>. In this demonstration, we
         will create two user defined classes - one to represent the existing database table <span class="bold">customer</span>
         and the other to represent a new database table <span class="hi-yellow">account</span> (with a one-to-many relationship
@@ -764,7 +764,7 @@ FROM customer JOIN account ON customer.id = account.cust_id GROUP BY customer.id
       <p>References</p>
     </div>
     <div id="para-div">
-      <p><a href="https://polarsparc.github.io/Data/SQLAlchemy-1.html" target="_blank"><span class="bold">Introduction to SQLAlchemy :: Part - 1</span></a></p>
+      <p><a href="https://polarsparc.github.io/DataX/SQLAlchemy-1.html" target="_blank"><span class="bold">Introduction to SQLAlchemy :: Part - 1</span></a></p>
       <p><a href="https://docs.sqlalchemy.org/en/13/orm/tutorial.html" target="_blank"><span class="bold">SQLAlchemy Object Relational Tutorial</span></a></p>
       <p><a href="https://www.sqlalchemy.org/" target="_blank"><span class="bold">SQLAlchemy</span></a></p>
       <p><a href="https://www.pythonsheets.com/notes/python-sqlalchemy.html" target="_blank"><span class="bold">PySheet SQLAlchemy</span></a></p>
