--- a/Python/Flask-2.html
+++ b/Python/Flask-2.html
@@ -527,7 +527,7 @@ def logoff():
     <div id="para-div">
       <p><a href="https://github.com/bhaskars-repo/SecureNotes" target="_blank"><span class="bold">GitHub - Source Code</span></a></p>
       <p><a href="https://polarsparc.github.io/Python/Python-Flask-1.html" target="_blank"><span class="bold">Web Applications using Python Flask - Part I</span></a></p>
-      <p><a href="https://polarsparc.github.io/Data/SQLAlchemy-2.html" target="_blank"><span class="bold">Introduction to SQLAlchemy :: Part - 2</span></a></p>
+      <p><a href="https://polarsparc.github.io/DataX/SQLAlchemy-2.html" target="_blank"><span class="bold">Introduction to SQLAlchemy :: Part - 2</span></a></p>
     </div>
     <hr class="line-hr" />
     <div>
