--- a/index.html
+++ b/index.html
@@ -255,31 +255,31 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Data/SQLAlchemy-3.html"><span class="bold">Introduction to
+          <p><a target="_blank" href="https://polarsparc.github.io/DataX/SQLAlchemy-3.html"><span class="bold">Introduction to
             SQLAlchemy :: Part - 3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Data/SQLAlchemy-2.html"><span class="bold">Introduction to
+          <p><a target="_blank" href="https://polarsparc.github.io/DataX/SQLAlchemy-2.html"><span class="bold">Introduction to
             SQLAlchemy :: Part - 2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Data/SQLAlchemy-1.html"><span class="bold">Introduction to
+          <p><a target="_blank" href="https://polarsparc.github.io/DataX/SQLAlchemy-1.html"><span class="bold">Introduction to
             SQLAlchemy :: Part - 1</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Data/ApacheCalcite.html"><span class="bold">Introduction to Apache
+          <p><a target="_blank" href="https://polarsparc.github.io/DataX/ApacheCalcite.html"><span class="bold">Introduction to Apache
             Calcite</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Data/ApacheDrill.html"><span class="bold">Introduction to Apache
+          <p><a target="_blank" href="https://polarsparc.github.io/DataX/ApacheDrill.html"><span class="bold">Introduction to Apache
             Drill</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Data/ApacheParquet.html"><span class="bold">Introduction to Apache
+          <p><a target="_blank" href="https://polarsparc.github.io/DataX/ApacheParquet.html"><span class="bold">Introduction to Apache
             Parquet</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Data/ApacheAvro.html"><span class="bold">Introduction to Apache
+          <p><a target="_blank" href="https://polarsparc.github.io/DataX/ApacheAvro.html"><span class="bold">Introduction to Apache
             Avro</span></a></p>
         </li>
       </ul>
