Update to Ollama

--- a/index.html
+++ b/index.html
@@ -558,44 +558,44 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/Llama-cpp.html"><span class="bold">Quick Primer on Llama.cpp
-            </span></a></p>
+          <p>08/08/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer
+            on Ollama</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/LangChainRecipes.html"><span class="bold">Common LangChain
-            Recipes</span></a></p>
+          <p>06/28/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Llama-cpp.html"><span class="bold">Quick Primer
+            on Llama.cpp</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain.html"><span class="bold">Quick Primer on LangChain
-            </span></a></p>
+          <p>06/15/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChainRecipes.html"><span class="bold">Common
+            LangChain Recipes</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/OpenWebUI.html"><span class="bold">Quick Primer on Open WebUI
-            with Ollama</span></a></p>
+          <p>06/15/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain.html"><span class="bold">Quick Primer
+            on LangChain</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer on Ollama</span>
-            </a></p>
+          <p>05/31/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/OpenWebUI.html"><span class="bold">Quick Primer
+            on Open WebUI with Ollama</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/PydanticAI.html"><span class="bold">Quick Primer on PydanticAI
-            </span></a></p>
+          <p>05/03/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/PydanticAI.html"><span class="bold">Quick Primer
+            on PydanticAI</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/LangGraph.html"><span class="bold">Quick Primer on LangGraph
-            </span></a></p>
+          <p>05/03/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangGraph.html"><span class="bold">Quick Primer
+            on LangGraph</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/GGUF-Ollama.html"><span class="bold">Quick Primer on Running
-            GGUF models on Ollama</span></a></p>
+          <p>01/04/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/GGUF-Ollama.html"><span class="bold">Quick Primer
+            on Running GGUF models on Ollama</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/RunFlux.html"><span class="bold">Quick Tip :: Running Text-to-Image
-            Diffusion Model on a Local Machine</span></a></p>
+          <p>12/31/2024 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunFlux.html"><span class="bold">Quick Tip ::
+            Running Text-to-Image Diffusion Model on a Local Machine</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/HuggingFace.html"><span class="bold">Quick Primer on Hugging
-            Face</span></a></p>
+          <p>04/27/2024 | <a target="_blank" href="https://polarsparc.github.io/GenAI/HuggingFace.html"><span class="bold">Quick Primer
+            on Hugging Face</span></a></p>
         </li>
       </ul>
     </div>
