--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Ansible/Ansible-3.html"><span class="bold">Introduction to Ansible
-            - Part 3</span></a></p>
+          <p>07/08/2018 | <a target="_blank" href="https://polarsparc.github.io/Ansible/Ansible-3.html"><span class="bold">Introduction
+            to Ansible - Part 3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Ansible/Ansible-2.html"><span class="bold">Introduction to Ansible
-            - Part 2</span></a></p>
+          <p>07/04/2018 | <a target="_blank" href="https://polarsparc.github.io/Ansible/Ansible-2.html"><span class="bold">Introduction
+            to Ansible - Part 2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Ansible/Ansible-1.html"><span class="bold">Introduction to Ansible
-            - Part 1</span></a></p>
+          <p>06/17/2018 | <a target="_blank" href="https://polarsparc.github.io/Ansible/Ansible-1.html"><span class="bold">Introduction
+            to Ansible - Part 1</span></a></p>
         </li>
       </ul>
     </div>
@@ -144,8 +144,8 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Blockchain/Blockchain.html"><span class="bold">Introduction to
-            Blockchain</span></a></p>
+          <p>10/01/2016 | <a target="_blank" href="https://polarsparc.github.io/Blockchain/Blockchain.html"><span class="bold">Introduction
+            to Blockchain</span></a></p>
         </li>
       </ul>
     </div>
@@ -156,20 +156,20 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-4.html"><span class="bold">Cassandra Quick
-            Notes :: Part - 4</span></a></p>
+          <p>12/01/2023 | <a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-4.html"><span class="bold">Cassandra
+            Quick Notes :: Part - 4</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-3.html"><span class="bold">Cassandra Quick
-            Notes :: Part - 3</span></a></p>
+          <p>11/28/2023 | <a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-3.html"><span class="bold">Cassandra
+            Quick Notes :: Part - 3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-2.html"><span class="bold">Cassandra Quick
-            Notes :: Part - 2</span></a></p>
+          <p>11/27/2023 | <a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-2.html"><span class="bold">Cassandra
+            Quick Notes :: Part - 2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-1.html"><span class="bold">Cassandra Quick
-            Notes :: Part - 1</span></a></p>
+          <p>11/24/2023 | <a target="_blank" href="https://polarsparc.github.io/Cassandra/Cassandra-1.html"><span class="bold">Cassandra
+            Quick Notes :: Part - 1</span></a></p>
         </li>
       </ul>
     </div>
@@ -180,16 +180,16 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Chatbot/Rasa-3.html"><span class="bold">Hands-on Primer on Rasa
-            - Part 3</span></a></p>
+          <p>11/16/2024 | <a target="_blank" href="https://polarsparc.github.io/Chatbot/Rasa-3.html"><span class="bold">Hands-on Primer
+            on Rasa - Part 3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Chatbot/Rasa-2.html"><span class="bold">Hands-on Primer on Rasa
-            - Part 2</span></a></p>
+          <p>11/10/2024 | <a target="_blank" href="https://polarsparc.github.io/Chatbot/Rasa-2.html"><span class="bold">Hands-on Primer
+            on Rasa - Part 2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Chatbot/Rasa-1.html"><span class="bold">Hands-on Primer on Rasa
-            - Part 1</span></a></p>
+          <p>11/08/2024 | <a target="_blank" href="https://polarsparc.github.io/Chatbot/Rasa-1.html"><span class="bold">Hands-on Primer
+            on Rasa - Part 1</span></a></p>
         </li>
       </ul>
     </div>
@@ -200,31 +200,32 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Terraform/Terraform.html"><span class="bold">Introduction to
-            Terraform</span></a></p>
+          <p>03/12/2023 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Terraform.html"><span class="bold">Introduction
+            to Terraform</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Terraform/K8S-Storage.html"><span class="bold">Hands-on Kubernetes
-            Storage</span></a></p>
+          <p>03/03/2023 | <a target="_blank" href="https://polarsparc.github.io/Cloud/K8S-Storage.html"><span class="bold">Hands-on
+            Kubernetes Storage</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Vault.html"><span class="bold">Hands-on with HashiCorp Vault
-            </span></a></p>
+          <p>01/01/2021 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Vault.html"><span class="bold">Hands-on with
+            HashiCorp Vault</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Envoy.html"><span class="bold">Introduction to Envoy</span>
-            </a></p>
+          <p>10/25/2020 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Envoy.html"><span class="bold">Introduction
+            to Envoy</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Practical-K8S-N2.html"><span class="bold">Practical Kubernetes
-            on ODroid-N2 Cluster (ARM Edition)</span></a></p>
+          <p>12/15/2019 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Practical-K8S-N2.html"><span class="bold">Practical
+            Kubernetes on ODroid-N2 Cluster (ARM Edition)</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Kubernetes.html"><span class="bold">Introduction to Kubernetes
-            (ARM Edition)</span></a></p>
+          <p>01/21/2019 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Kubernetes.html"><span class="bold">Introduction
+            to Kubernetes (ARM Edition)</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Consul.html"><span class="bold">Hands-on with Consul</span></a></p>
+          <p>04/29/2017 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Consul.html"><span class="bold">Hands-on with
+            Consul</span></a></p>
         </li>
       </ul>
     </div>
@@ -235,16 +236,16 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cryptography/FiatShamirZKP.html"><span class="bold">Fiat-Shamir
-            Zero Knowledge Proof</span></a></p>
+          <p>01/01/2023 | <a target="_blank" href="https://polarsparc.github.io/Cryptography/FiatShamirZKP.html"><span class="bold">
+            Fiat-Shamir Zero Knowledge Proof</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cryptography/EllipticCurve.html"><span class="bold">FUNtastic
-            Elliptic Curves</span></a></p>
+          <p>12/16/2022 | <a target="_blank" href="https://polarsparc.github.io/Cryptography/EllipticCurve.html"><span class="bold">
+            FUNtastic Elliptic Curves</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Cryptography/SecretSharing.html"><span class="bold">Shamir's Secret
-            Sharing Unraveled</span></a></p>
+          <p>09/15/2018 | <a target="_blank" href="https://polarsparc.github.io/Cryptography/SecretSharing.html"><span class="bold">
+            Shamir's Secret Sharing Unraveled</span></a></p>
         </li>
       </ul>
     </div>
@@ -474,20 +475,20 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Drools/Drools-4.html"><span class="bold">Java Rules Engine - Drools
-            :: Part 4</span></a></p>
+          <p>07/17/2021 | <a target="_blank" href="https://polarsparc.github.io/Drools/Drools-4.html"><span class="bold">Java Rules
+            Engine - Drools :: Part 4</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Drools/Drools-3.html"><span class="bold">Java Rules Engine - Drools
-            :: Part 3</span></a></p>
+          <p>06/12/2021 | <a target="_blank" href="https://polarsparc.github.io/Drools/Drools-3.html"><span class="bold">Java Rules
+            Engine - Drools :: Part 3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Drools/Drools-2.html"><span class="bold">Java Rules Engine - Drools
-            :: Part 2</span></a></p>
+          <p>06/11/2021 | <a target="_blank" href="https://polarsparc.github.io/Drools/Drools-2.html"><span class="bold">Java Rules
+            Engine - Drools :: Part 2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Drools/Drools-1.html"><span class="bold">Java Rules Engine - Drools
-            :: Part 1</span></a></p>
+          <p>06/05/2021 | <a target="_blank" href="https://polarsparc.github.io/Drools/Drools-1.html"><span class="bold">Java Rules
+            Engine - Drools :: Part 1</span></a></p>
         </li>
       </ul>
     </div>
@@ -542,12 +543,12 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Finance/Payments-101.html"><span class="bold">Card and Mobile
-            Payments Flow 101</span></a></p>
+          <p>08/10/2024 | <a target="_blank" href="https://polarsparc.github.io/Finance/Payments-101.html"><span class="bold">Card and
+            Mobile Payments Flow 101</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Finance/SVB-Collapse.html"><span class="bold">Silicon Valley Bank
-            Collapse Explained</span></a></p>
+          <p>03/15/2023 | <a target="_blank" href="https://polarsparc.github.io/Finance/SVB-Collapse.html"><span class="bold">Silicon
+            Valley Bank Collapse Explained</span></a></p>
         </li>
       </ul>
     </div>
@@ -1185,8 +1186,8 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on Model Context
-            Protocol (MCP)</span></a></p>
+          <p>04/13/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on
+            Model Context Protocol (MCP)</span></a></p>
         </li>
       </ul>
     </div>
@@ -1197,7 +1198,8 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/MinIO/MinIO.html"><span class="bold">Hands-on with MinIO</span></a></p>
+          <p>10/29/2022 | <a target="_blank" href="https://polarsparc.github.io/MinIO/MinIO.html"><span class="bold">Hands-on with
+            MinIO</span></a></p>
         </li>
       </ul>
     </div>
@@ -1453,8 +1455,8 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringAI/PragmaticSpringAI.html"><span class="bold">Pragmatic
-            Bytes on Spring AI</span></a></p>
+          <p>06/21/2025 | <a target="_blank" href="https://polarsparc.github.io/SpringAI/PragmaticSpringAI.html"><span class="bold">
+            Pragmatic Bytes on Spring AI</span></a></p>
         </li>
       </ul>
     </div>
@@ -1529,16 +1531,16 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Tips/JetBrains.html"><span class="bold">JetBrains IDE Markdown
-            Appears Blank</span></a></p>
+          <p>01/25/2025 | <a target="_blank" href="https://polarsparc.github.io/Tips/JetBrains.html"><span class="bold">JetBrains IDE
+            Markdown Appears Blank</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Tips/LinuxCitrix.html"><span class="bold">Citrix Workspace App
-            for Linux Gotcha</span></a></p>
+          <p>12/05/2022 | <a target="_blank" href="https://polarsparc.github.io/Tips/LinuxCitrix.html"><span class="bold">Citrix
+            Workspace App for Linux Gotcha</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Tips/MintSamba.html"><span class="bold">Linux Mint Samba Share
-            Gotcha</span></a></p>
+          <p>08/14/2022 | <a target="_blank" href="https://polarsparc.github.io/Tips/MintSamba.html"><span class="bold">Linux Mint
+            Samba Share Gotcha</span></a></p>
         </li>
       </ul>
     </div>
@@ -1549,16 +1551,16 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/VectorDB/QB-PgVector.html"><span class="bold">Quick Bytes -
-            PgVector Vector Store</span></a></p>
+          <p>05/16/2025 | <a target="_blank" href="https://polarsparc.github.io/VectorDB/QB-PgVector.html"><span class="bold">Quick
+            Bytes - PgVector Vector Store</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/VectorDB/QB-Sqlite-Vec.html"><span class="bold">Quick Bytes -
-            Sqlite-Vec Vector Store</span></a></p>
+          <p>05/16/2025 | <a target="_blank" href="https://polarsparc.github.io/VectorDB/QB-Sqlite-Vec.html"><span class="bold">Quick
+            Bytes - Sqlite-Vec Vector Store</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/VectorDB/Milvus.html"><span class="bold">Hands-On with Milvus
-            Vector Database</span></a></p>
+          <p>10/13/2023 | <a target="_blank" href="https://polarsparc.github.io/VectorDB/Milvus.html"><span class="bold">Hands-On
+            with Milvus Vector Database</span></a></p>
         </li>
       </ul>
     </div>
