--- a/index.html
+++ b/index.html
@@ -256,32 +256,32 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/DataX/SQLAlchemy-3.html"><span class="bold">Introduction to
-            SQLAlchemy :: Part - 3</span></a></p>
+          <p>08/18/2024 | <a target="_blank" href="https://polarsparc.github.io/DataX/ApacheCalcite.html"><span class="bold">Introduction
+            to Apache Calcite</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/DataX/SQLAlchemy-2.html"><span class="bold">Introduction to
-            SQLAlchemy :: Part - 2</span></a></p>
+          <p>10/14/2022 | <a target="_blank" href="https://polarsparc.github.io/DataX/ApacheDrill.html"><span class="bold">Introduction
+            to Apache Drill</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/DataX/SQLAlchemy-1.html"><span class="bold">Introduction to
-            SQLAlchemy :: Part - 1</span></a></p>
+          <p>10/07/2022 | <a target="_blank" href="https://polarsparc.github.io/DataX/ApacheParquet.html"><span class="bold">Introduction
+            to Apache Parquet</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/DataX/ApacheCalcite.html"><span class="bold">Introduction to Apache
-            Calcite</span></a></p>
+          <p>04/25/2020 | <a target="_blank" href="https://polarsparc.github.io/DataX/SQLAlchemy-3.html"><span class="bold">Introduction
+            to SQLAlchemy :: Part - 3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/DataX/ApacheDrill.html"><span class="bold">Introduction to Apache
-            Drill</span></a></p>
+          <p>04/17/2020 | <a target="_blank" href="https://polarsparc.github.io/DataX/SQLAlchemy-2.html"><span class="bold">Introduction
+            to SQLAlchemy :: Part - 2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/DataX/ApacheParquet.html"><span class="bold">Introduction to Apache
-            Parquet</span></a></p>
+          <p>04/04/2020 | <a target="_blank" href="https://polarsparc.github.io/DataX/SQLAlchemy-1.html"><span class="bold">Introduction
+            to SQLAlchemy :: Part - 1</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/DataX/ApacheAvro.html"><span class="bold">Introduction to Apache
-            Avro</span></a></p>
+          <p>12/13/2013 | <a target="_blank" href="https://polarsparc.github.io/DataX/ApacheAvro.html"><span class="bold">Introduction
+            to Apache Avro</span></a></p>
         </li>
       </ul>
     </div>
@@ -1186,7 +1186,7 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p>04/13/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on
+          <p>08/16/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on
             Model Context Protocol (MCP)</span></a></p>
         </li>
       </ul>
@@ -1210,24 +1210,24 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-5.html"><span class="bold">Hands-on MongoDB ::
-            Part-5</span></a></p>
+          <p>02/19/2021 | <a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-5.html"><span class="bold">Hands-on
+            MongoDB :: Part-5</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-4.html"><span class="bold">Hands-on MongoDB ::
-            Part-4</span></a></p>
+          <p>02/13/2021 | <a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-4.html"><span class="bold">Hands-on
+            MongoDB :: Part-4</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-3.html"><span class="bold">Hands-on MongoDB ::
-            Part-3</span></a></p>
+          <p>02/06/2021 | <a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-3.html"><span class="bold">Hands-on
+            MongoDB :: Part-3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-2.html"><span class="bold">Hands-on MongoDB ::
-            Part-2</span></a></p>
+          <p>01/30/2021 | <a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-2.html"><span class="bold">Hands-on
+            MongoDB :: Part-2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-1.html"><span class="bold">Hands-on MongoDB ::
-            Part-1</span></a></p>
+          <p>01/23/2021 | <a target="_blank" href="https://polarsparc.github.io/MongoDB/MongoDB-1.html"><span class="bold">Hands-on
+            MongoDB :: Part-1</span></a></p>
         </li>
       </ul>
     </div>
@@ -1238,16 +1238,16 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Neo4J/Neo4J-3.html"><span class="bold">Getting Started with Neo4J
-            - Part 3</span></a></p>
+          <p>12/09/2017 | <a target="_blank" href="https://polarsparc.github.io/Neo4J/Neo4J-3.html"><span class="bold">Getting Started
+            with Neo4J - Part 3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Neo4J/Neo4J-2.html"><span class="bold">Getting Started with Neo4J
-            - Part 2</span></a></p>
+          <p>12/02/2017 | <a target="_blank" href="https://polarsparc.github.io/Neo4J/Neo4J-2.html"><span class="bold">Getting Started
+            with Neo4J - Part 2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Neo4J/Neo4J-1.html"><span class="bold">Getting Started with Neo4J
-            - Part 1</span></a></p>
+          <p>11/26/2017 | <a target="_blank" href="https://polarsparc.github.io/Neo4J/Neo4J-1.html"><span class="bold">Getting Started
+            with Neo4J - Part 1</span></a></p>
         </li>
       </ul>
     </div>
@@ -1467,20 +1467,20 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-4.html"><span class=
-            "bold">Spring Framework Core Essentials - Part 4</span></a></p>
+          <p>07/20/2019 | <a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-4.html">
+            <span class="bold">Spring Framework Core Essentials - Part 4</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-3.html"><span class=
-            "bold">Spring Framework Core Essentials - Part 3</span></a></p>
+          <p>07/19/2019 | <a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-3.html">
+            <span class="bold">Spring Framework Core Essentials - Part 3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-2.html"><span class=
-            "bold">Spring Framework Core Essentials - Part 2</span></a></p>
+          <p>07/12/2019 | <a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-2.html">
+            <span class="bold">Spring Framework Core Essentials - Part 2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-1.html"><span class=
-            "bold">Spring Framework Core Essentials - Part 1</span></a></p>
+          <p>07/06/2019 | <a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-1.html">
+            <span class="bold">Spring Framework Core Essentials - Part 1</span></a></p>
         </li>
       </ul>
     </div>
@@ -1491,36 +1491,36 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-08.html"><span class="bold">
-            Spring Integration Notes :: Part - 8</span></a></p>
+          <p>05/22/2021 | <a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-08.html"><span
+            class="bold">Spring Integration Notes :: Part - 8</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-07.html"><span class="bold">
-            Spring Integration Notes :: Part - 7</span></a></p>
+          <p>05/22/2021 | <a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-07.html"><span
+            class="bold">Spring Integration Notes :: Part - 7</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-06.html"><span class="bold">
-            Spring Integration Notes :: Part - 6</span></a></p>
+          <p>05/22/2021 | <a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-06.html"><span
+            class="bold">Spring Integration Notes :: Part - 6</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-05.html"><span class="bold">
-            Spring Integration Notes :: Part - 5</span></a></p>
+          <p>05/15/2021 | <a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-05.html"><span
+            class="bold">Spring Integration Notes :: Part - 5</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-04.html"><span class="bold">
-            Spring Integration Notes :: Part - 4</span></a></p>
+          <p>05/08/2021 | <a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-04.html"><span
+            class="bold">Spring Integration Notes :: Part - 4</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-03.html"><span class="bold">
-            Spring Integration Notes :: Part - 3</span></a></p>
+          <p>05/01/2021 | <a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-03.html"><span
+            class="bold">Spring Integration Notes :: Part - 3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-02.html"><span class="bold">
-            Spring Integration Notes :: Part - 2</span></a></p>
+          <p>04/24/2021 | <a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-02.html"><span
+            class="bold">Spring Integration Notes :: Part - 2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-01.html"><span class="bold">
-            Spring Integration Notes :: Part - 1</span></a></p>
+          <p>04/17/2021 | <a target="_blank" href="https://polarsparc.github.io/SpringIntegration/SpringIntegration-01.html"><span
+            class="bold">Spring Integration Notes :: Part - 1</span></a></p>
         </li>
       </ul>
     </div>
