--- a/index.html
+++ b/index.html
@@ -560,6 +560,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>08/23/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
+            Test :: Text-to-Image using Qwen-Image on a Local Machine</span></a></p>
+        </li>
+        <li>
           <p>08/08/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer
             on Ollama</span></a></p>
         </li>
