--- a/Python/ContextManager.html
+++ b/Python/ContextManager.html
@@ -713,6 +713,104 @@ Exception: AsyncTest Exception</pre>
     </div>
     <br/>
     <div id="para-div">
+      <p>The decorator <span class="hi-yellow">contextlib.asynccontextmanager</span> allows one to convert an async generator function
+        into an Async Context Manager.</p>
+    </div>
+    <div id="para-div">
+      <p>The following Python script demonstrates the use of the <span class="bold">asynccontextmanager</span> decorator:</p>
+    </div>
+    <br/>
+    <div id="src-outer-div-1">
+      <div class="src-cap-1">sample-9.py</div>
+      <div class="src-body-1">
+<pre>#
+# @Author: Bhaskar S
+# @Blog:   https://polarsparc.github.io
+# @Date:   30 Aug 2025
+#
+
+import asyncio
+import logging
+
+# Logging Configuration
+logging.basicConfig(format='%(asctime)s | %(levelname)s -> %(message)s',
+                    datefmt='%Y-%m-%d %H:%M:%S',
+                    level=logging.INFO)
+
+# Logger
+logger = logging.getLogger('Sample-9')
+
+# Async context manager using decorator
+
+from contextlib import asynccontextmanager
+
+@asynccontextmanager
+async def async_text_context():
+  logger.info('Entered async text context ...')
+  try:
+    yield 'Async hola world!'
+  except RuntimeError as re:
+    logger.error(f'Exception occurred: {re}')
+  finally:
+    logger.info('Exiting async text context ...')
+
+# Main method
+
+async def main():
+  async with async_text_context() as value:
+    logger.info(f'Value: {value}')
+
+  async with async_text_context() as value:
+    raise RuntimeError('Simulated Runtime Error')
+
+  async with async_text_context() as value:
+    raise ValueError('Simulated Value Error')
+
+if __name__ == '__main__':
+  asyncio.run(main())</pre>
+      </div>
+    </div>
+    <br/>
+    <div id="para-div">
+      <p>To run the Python script <span class="bold">sample-9.py</span>, execute the following command:</p>
+    </div>
+    <br/>
+    <div id="cmd-div">
+      <p>$ python3 sample-9.py</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <p>The following would be a typical output:</p>
+    </div>
+    <br/>
+    <div id="out-div">
+      <h4>Output.9</h4>
+      <pre>2025-08-31 21:37:26 | INFO -> Entered async text context ...
+2025-08-31 21:37:26 | INFO -> Value: Async hola world!
+2025-08-31 21:37:26 | INFO -> Exiting async text context ...
+2025-08-31 21:37:26 | INFO -> Entered async text context ...
+2025-08-31 21:37:26 | ERROR -> Exception occurred: Simulated Runtime Error
+2025-08-31 21:37:26 | INFO -> Exiting async text context ...
+2025-08-31 21:37:26 | INFO -> Entered async text context ...
+2025-08-31 21:37:26 | INFO -> Exiting async text context ...
+Traceback (most recent call last):
+  File "/home/polarsparc/python/ContextManager/sample-9.py", line 45, in &lt;module&gt;
+    asyncio.run(main())
+  File "/usr/lib/python3.12/asyncio/runners.py", line 194, in run
+    return runner.run(main)
+           ^^^^^^^^^^^^^^^^
+  File "/usr/lib/python3.12/asyncio/runners.py", line 118, in run
+    return self._loop.run_until_complete(task)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  File "/usr/lib/python3.12/asyncio/base_events.py", line 687, in run_until_complete
+    return future.result()
+           ^^^^^^^^^^^^^^^
+  File "/home/polarsparc/python/ContextManager/sample-9.py", line 42, in main
+    raise ValueError('Simulated Value Error')
+ValueError: Simulated Value Error</pre>
+    </div>
+    <br/>
+    <div id="para-div">
       <p>With this, we conclude the primer on Python Context Manager !!!</p>
     </div>
     <br/>
