--- a/index.html
+++ b/index.html
@@ -1325,6 +1325,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>09/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/Python-uv.html"><span class="bold">Python uv
+            Tool</span></a></p>
+        </li>
+        <li>
           <p>08/31/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/ContextManager.html"><span class="bold">Primer
             on Python Context Manager</span></a></p>
         </li>
