--- a/index.html
+++ b/index.html
@@ -1325,6 +1325,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>10/05/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/FastAPI.html"><span class="bold">Quick Primer
+            on FastAPI</span></a></p>
+        </li>
+        <li>
           <p>09/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/Python-uv.html"><span class="bold">Python uv
             Tool</span></a></p>
         </li>
