Data, GenAI, Index

--- a/index.html
+++ b/index.html
@@ -29,6 +29,60 @@
       <p>Articles | Notes | Tips | Tutorials</p>
     </div>
     <br/>
+    <div id="section-div">
+      <p>Recent Article(s)</p>
+    </div>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p>11/09/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain.html"><span class="bold">Quick Primer
+            on LangChain</span></a></p>
+        </li>
+        <li>
+          <p>11/08/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer
+            on Ollama</span></a></p>
+        </li>
+        <li>
+          <p>10/05/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/FastAPI.html"><span class="bold">Quick Primer
+            on FastAPI</span></a></p>
+        </li>
+        <li>
+          <p>09/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/Python-uv.html"><span class="bold">Python uv
+            Tool</span></a></p>
+        </li>
+        <li>
+          <p>08/31/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/ContextManager.html"><span class="bold">Primer
+            on Python Context Manager</span></a></p>
+        </li>
+        <li>
+          <p>08/23/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
+            Test :: Text-to-Image using Qwen-Image on a Local Machine</span></a></p>
+        </li>
+        <li>
+          <p>08/16/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on
+            Model Context Protocol (MCP)</span></a></p>
+        </li>
+        <li>
+          <p>07/19/2025 | <a target="_blank" href="https://polarsparc.github.io/Ethereum/AnvilSolidityPython.html"><span class="bold">
+            Using Anvil and Solidity with Python</span></a></p>
+        </li>
+        <li>
+          <p>07/12/2025 | <a target="_blank" href="https://polarsparc.github.io/Mathematics/CrossEntropy.html"><span class="bold">
+            Understanding Cross Entropy</span></a></p>
+        </li>
+        <li>
+          <p>07/04/2025 | <a target="_blank" href="https://polarsparc.github.io/Ethereum/BesuPrivateCliqueDocker.html"><span class="bold">Hyperledger
+            Besu Private Network using Docker</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <br/>
+    <hr class="line-hr"/>
+    <br/>
+    <div id="section-div">
+      <p>Articles by Category</p>
+    </div>
+    <br/>
     <div id="step-div">
       <p>Ansible</p>
     </div>
@@ -560,12 +614,16 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p>08/23/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
-            Test :: Text-to-Image using Qwen-Image on a Local Machine</span></a></p>
+          <p>11/09/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain.html"><span class="bold">Quick Primer
+            on LangChain</span></a></p>
         </li>
         <li>
-          <p>08/08/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer
+          <p>11/08/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer
             on Ollama</span></a></p>
+        </li>
+        <li>
+          <p>08/23/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
+            Test :: Text-to-Image using Qwen-Image on a Local Machine</span></a></p>
         </li>
         <li>
           <p>06/28/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Llama-cpp.html"><span class="bold">Quick Primer
@@ -574,10 +632,6 @@
         <li>
           <p>06/15/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChainRecipes.html"><span class="bold">Common
             LangChain Recipes</span></a></p>
-        </li>
-        <li>
-          <p>06/15/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain.html"><span class="bold">Quick Primer
-            on LangChain</span></a></p>
         </li>
         <li>
           <p>05/31/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/OpenWebUI.html"><span class="bold">Quick Primer
@@ -590,6 +644,10 @@
         <li>
           <p>05/03/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangGraph.html"><span class="bold">Quick Primer
             on LangGraph</span></a></p>
+        </li>
+        <li>
+          <p>02/17/2025 | <a target="_blank" href="https://www.linkedin.com/pulse/generative-ai-starter-pack-bhaskar-swaminathan-kmybe/">
+            <span class="bold">Generative AI Starter Pack !</span></a></p>
         </li>
         <li>
           <p>01/04/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/GGUF-Ollama.html"><span class="bold">Quick Primer
@@ -622,10 +680,6 @@
         <li>
           <p>03/01/2025 | <a target="_blank" href="https://www.linkedin.com/pulse/mindset-aha-moment-bhaskar-swaminathan-chumc"><span
             class="bold">Mindset - An 'Aha' Moment !</span></a></p>
-        </li>
-        <li>
-          <p>02/17/2025 | <a target="_blank" href="https://www.linkedin.com/pulse/generative-ai-starter-pack-bhaskar-swaminathan-kmybe/">
-            <span class="bold">Generative AI Starter Pack !</span></a></p>
         </li>
         <li>
           <p>12/24/2024 | <a target="_blank" href="https://www.linkedin.com/pulse/cautionary-reminder-major-updates-prod-bhaskar-swaminathan-msbfe">
